2. Методологии вёрстки. 3. Разметка страницы формы

--- a/source/index.html
+++ b/source/index.html
@@ -20,17 +20,17 @@
         <ul class="menu__nav-block">
           <li class="menu__items">
             <!-- Кнопка для закрытия навигационного меню будет реализовано псевдоэлементами-->
-            <a class="menu__link" href="#">
+            <a class="menu__link">
               Главная
             </a>
           </li>
           <li class="menu__items">
-            <a class="menu__link" href="#">
+            <a class="menu__link" href="catalog.html">
               Фото и видео
             </a>
           </li>
           <li class="menu__items">
-            <a class="menu__link" href="#">
+            <a class="menu__link" href="form.html">
               Форма Отзыва
             </a>
           </li>
@@ -63,7 +63,6 @@
       <img class="welcome__gorgeous" src="https://via.placeholder.com/150x150" alt="-to the gorgeous-">
       <img class="welcome__sedona" src="https://via.placeholder.com/150x150" alt="«Sedona»">
       <img class="welcome__canyon" src="https://via.placeholder.com/150x150" alt="«Because the grand canyon sucks!»">
-      <!-- последнее слово на уточнении -->
     </section>
     <!-- Добро пожаловать в «Седону» end -->
 
