2. Методологии вёрстки. 3. Разметка страницы формы

--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,9 @@
 
       <!-- Навигационное меню (закрытое) start -->
       <div class="menu__hide">
-        <img class="menu__logo" src="https://via.placeholder.com/150x150" alt="Логотип «Седона»">
+        <a class="menu__logo" href="index.html">
+          <img class="menu__pic" src="https://via.placeholder.com/150x150" alt="Логотип «Седона»">
+        </a>
         <img class="menu__burger" src="https://via.placeholder.com/150x150" alt="Кнопка меню «бургер»">
       </div>
     </div>
@@ -181,7 +183,7 @@
             </h4>
             <p class="reasons__items-info">
               ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА
-            совсем НЕ СКУЧНО!
+              совсем НЕ СКУЧНО!
             </p>
           </div>
         </div>
@@ -271,7 +273,7 @@
           </a>
         </li>
         <li class="social__sitem">
-          <a  class="social__link" href="#">
+          <a class="social__link" href="#">
             <p class="visually-hidden">
               Ютуб
             </p>
