--- a/source/form.html
+++ b/source/form.html
@@ -45,7 +45,9 @@
 
       <!-- Навигационное меню (закрытое) start -->
       <div class="menu__hide">
-        <img class="menu__logo" src="https://via.placeholder.com/150x150" alt="Логотип «Седона»">
+        <a class="menu__logo" href="index.html">
+          <img class="menu__pic" src="https://via.placeholder.com/150x150" alt="Логотип «Седона»">
+        </a>
         <img class="menu__burger" src="https://via.placeholder.com/150x150" alt="Кнопка меню «бургер»">
       </div>
     </div>
@@ -89,19 +91,22 @@
               <li class="reviews__li">
                 <p class="reviews__data">
                   <label class="reviews__label" for="user-name">ИМЯ*:</label>
-                  <input class="reviews__input" id="user-name" type="text" name="userName" placeholder="Петр" required tabindex="0">
+                  <input class="reviews__input" id="user-name" type="text" name="userName" placeholder="Петр" required
+                    tabindex="0">
                 </p>
               </li>
               <li class="reviews__li">
                 <p class="reviews__data">
                   <label class="reviews__label" for="user-surname">ФАМИЛИЯ*:</label>
-                  <input class="reviews__input" id="user-surname" type="text" name="userSurname" placeholder="Иванов" required tabindex="0">
+                  <input class="reviews__input" id="user-surname" type="text" name="userSurname" placeholder="Иванов"
+                    required tabindex="0">
                 </p>
               </li>
               <li class="reviews__li">
                 <p class="reviews__data">
                   <label class="reviews__label" for="user-patronymic">Отчество:</label>
-                  <input class="reviews__input" id="user-patronymic" type="text" name="userЗatronymic" placeholder="Александрович" tabindex="0">
+                  <input class="reviews__input" id="user-patronymic" type="text" name="userЗatronymic"
+                    placeholder="Александрович" tabindex="0">
                 </p>
               </li>
             </ul>
@@ -114,13 +119,15 @@
               <li class="reviews__li">
                 <p class="reviews__data">
                   <label class="reviews__label" for="user-phone">Контактный телефон*:</label>
-                  <input class="reviews__input" id="user-phone" type="text" name="userPhone" placeholder="Введите телефон" required tabindex="0">
+                  <input class="reviews__input" id="user-phone" type="text" name="userPhone"
+                    placeholder="Введите телефон" required tabindex="0">
                 </p>
               </li>
               <li class="reviews__li">
                 <p class="reviews__data">
                   <label class="reviews__label" for="user-email">Электронная почта*:</label>
-                  <input class="reviews__input" id="user-email" type="email" name="userEmail" placeholder="Введите e-mail" required tabindex="0">
+                  <input class="reviews__input" id="user-email" type="email" name="userEmail"
+                    placeholder="Введите e-mail" required tabindex="0">
                 </p>
               </li>
             </ul>
@@ -132,7 +139,8 @@
             <ul class="reviews__items">
               <li class="reviews__li">
                 <p class="reviews__data">
-                  <input class="reviews__label" value="positive" type="radio" name="impression" id="filter-positive" checked>
+                  <input class="reviews__label" value="positive" type="radio" name="impression" id="filter-positive"
+                    checked>
                   <label class="reviews__input" for="filter-positive">Скорее положительное</label>
                 </p>
               </li>
@@ -157,13 +165,15 @@
             <ul class="reviews__items">
               <li class="reviews__li">
                 <p class="reviews__data">
-                  <input class="reviews__label" value="bridge" type="checkbox" name="emotion" id="filter-bridge" checked>
+                  <input class="reviews__label" value="bridge" type="checkbox" name="emotion" id="filter-bridge"
+                    checked>
                   <label class="reviews__input" for="filter-bridge">Мост Дьявола</label>
                 </p>
               </li>
               <li>
                 <p class="reviews__data">
-                  <input class="reviews__label" value="mountain" type="checkbox" name="emotion" id="filter-mountain" checked>
+                  <input class="reviews__label" value="mountain" type="checkbox" name="emotion" id="filter-mountain"
+                    checked>
                   <label class="reviews__input" for="filter-mountain">Гора-Колокол</label>
                 </p>
               </li>
@@ -188,14 +198,16 @@
             <ul class="reviews__items">
               <li class="reviews__li">
                 <p class="reviews__data">
-                  <label class="reviews__label visually-hidden" for="user-description">Опишите подробно все свои восторги </label>
-                  <input class="reviews__input" id="user-description" type="text" name="userDescription" placeholder="Опишите подробно все свои восторги " tabindex="0">
+                  <label class="reviews__label visually-hidden" for="user-description">Опишите подробно все свои
+                    восторги </label>
+                  <input class="reviews__input" id="user-description" type="text" name="userDescription"
+                    placeholder="Опишите подробно все свои восторги " tabindex="0">
                 </p>
               </li>
             </ul>
           </fieldset>
           <div class="reviews__button">
-            <button  class="reviews__pin" id="button" type="submit" tabindex="0">ОТПРАВИТЬ ОТЗЫВ</button>
+            <button class="reviews__pin" id="button" type="submit" tabindex="0">ОТПРАВИТЬ ОТЗЫВ</button>
           </div>
         </form>
       </div>
